syntax = "proto3";
package kagzi;

// Error definitions shared across services.
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_NOT_FOUND = 1;
  ERROR_CODE_INVALID_ARGUMENT = 2;
  ERROR_CODE_INVALID_STATE = 3;
  ERROR_CODE_PRECONDITION_FAILED = 4;
  ERROR_CODE_CONFLICT = 5;
  ERROR_CODE_ALREADY_COMPLETED = 6;
  ERROR_CODE_UNAUTHORIZED = 7;
  ERROR_CODE_UNAVAILABLE = 8;
  ERROR_CODE_INTERNAL = 9;
}

message ErrorDetail {
  // Required: machine-readable code.
  ErrorCode code = 1;
  // Required: human-readable message.
  string message = 2;
  // Optional: mark error as terminal for retry loops.
  bool non_retryable = 3;
  // Optional: server-suggested retry backoff in milliseconds.
  int64 retry_after_ms = 4;
  // Optional: subject/type of the referenced resource.
  string subject = 5;
  // Optional: identifier of the referenced resource.
  string subject_id = 6;
}

